搭建基本页面

--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,13 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    /* 继承高度 */
+    body,html,#app{
+      height: 100%;
+    }
+    body{
+      margin:0;
+    }
+  </style>
 </html>
