--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
     body,html,#app{
       height: 100%;
     }
+    body,html{
+      overflow: hidden;
+    }
+    #app{
+      overflow: auto;
+    }
     body{
       margin:0;
     }
